<?xml version="1.0"?>
<package format="2">
  <name>chopsticks_two_driver</name>
  <version>1.0.0</version>
  <description>The chopsticks_two_driver package</description>

  <maintainer email="maximilian@von-unwerth.de">Maximilian von Unwerth</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>cmake_module</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_control_boilerplate</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>cmake_module</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ros_control_boilerplate</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>cmake_module</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_control_boilerplate</exec_depend>

  <export>

  </export>
</package>
